--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
+      - name: Create .env file
+        run: |
+          cp .env.example .env
+
       - name: Generate application key
         run: php artisan key:generate
 
